--- a/index.html
+++ b/index.html
@@ -141,8 +141,12 @@
 
       <div style="padding-top: 30px">
         <img
-          style="margin-left: 450px; width: 300px"
+          style="margin-left: 200px; width: 300px"
           src="images/pictures/java.png"
+        />
+        <img
+          style="margin-left: 300px; width: 300px"
+          src="images/pictures/java-2.png"
         />
       </div>
 
