--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
         </p>
         <button>Explore Now</button>
         <p style="margin-top: 40px; font-family: Poppins; font-weight: 200px">
-          Scroll down to explore more about me
+          Scroll down to explore more about me!
         </p>
+        <hr>
       </div>
       <div class="half-width" id="new">
-        <img src="images/person/person-2.png" alt="Mahmud" />
+        <img src="images/person/person-2.png" alt="person-2" />
       </div>
     </section>
 
